<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Time\nMachine</string>
    <string name="menu_today">Today</string>
    <string name="menu_reg_pub">Reg Pub</string>
    <string name="menu_stat">Statis</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_todo">Todo</string>
    <string name="menu_about">About</string>
    <string name="hello">Hello World, MainTabActivity!</string>
    <string name="splash">splash</string>
    <string name="today_run">Run</string>
    <string name="add_btn">Add</string>
    <string name="alert_sync_title">Sync with the remote server</string>
    <string name="about_text">Time Machine combines the to-do List with the Regular
        Pub, besides, Pomodoro Time. \nIt will be a good assistant in your daily life
        and study\n\n
        <b>P.S.钱总爱你哟~</b>
    </string>
    <string name="sync_up_btn">"SyncUp"</string>
    <string name="checkBoxDefault"></string>
    <string name="sqlIDDefault"/>
    <string name="colorBarDefault"/>
    <string name="regular">Regular</string>
    <string name="task">Todo</string>
    <string name="add_item">Add Your Task/Regular</string>
    <string name="add_task">Add Task</string>
    <string name="add_task_name">Name</string>
    <string name="set_task_time">Set Time</string>
    <string name="add_task_done">OK</string>
    <string name="set_priority">Priority</string>
    <string name="important">Important!</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>



</resources>
